--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>RocketLerCoffee</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icon.png">
   </head>
   <body>
 
